--- a/index.html
+++ b/index.html
@@ -185,7 +185,17 @@
     </div>
 
     <div class="category-card">
-        <h3>RUBIK</h3>
+        <h3>Customer T2</h3>
+        <a href="rubik/modulo1/index.html" class="module-link">Módulo 1: Proceso</a>
+    </div>
+
+        <div class="category-card">
+        <h3>RIDER  T2</h3>
+        <a href="rubik/modulo1/index.html" class="module-link">Módulo 1: Proceso</a>
+    </div>
+
+        <div class="category-card">
+        <h3>VENDOR T2</h3>
         <a href="rubik/modulo1/index.html" class="module-link">Módulo 1: Proceso</a>
     </div>
 </div>
