--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <body>
 
 <div class="header">
-    <img src="https://www.svgrepo.com/show/303236/concentrix-logo.svg" class="logo-concentrix" alt="Logo Concentrix">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Concentrix_logo.svg/2560px-Concentrix_logo.svg.png" class="logo-concentrix" alt="Logo Concentrix">
     <h1>Portal del Héroe</h1>
     <div class="highlight-banner">
         Elige tu módulo para poder trabajar
