--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
         }
 
         .header { text-align: center; padding: 3rem 0; }
-        
-        /* Ajuste imponente para el logo de Concentrix */
-        .logo-concentrix { 
-            width: 280px; 
-            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1)); 
-        }
-
+        .logo-glovo { width: 160px; filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1)); }
         .header h1 { color: var(--dark); margin-top: 15px; font-size: 2.8rem; font-weight: 800; }
 
         .highlight-banner {
@@ -149,7 +143,7 @@
 <body>
 
 <div class="header">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Concentrix_logo.svg/2560px-Concentrix_logo.svg.png" class="logo-concentrix" alt="Logo Concentrix">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/82/Glovo_logo.svg/1200px-Glovo_logo.svg.png" class="logo-glovo" alt="Logo Glovo">
     <h1>Portal del Héroe</h1>
     <div class="highlight-banner">
         Elige tu módulo para poder trabajar
